modules/gdscript/tests/scripts/parser/errors/class_name_after_annotation.gd
# Error here. `class_name` should be used *before* annotations, not after (except @tool).
@icon("res://path/to/optional/icon.svg")
class_name HelloWorldIconBefore

func test():
    pass
